cmake_minimum_required(VERSION 3.30.3)
project(calculator)
# set(SRC add.cpp sub.cpp)
# aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
# set(EXECUTABLE_OUTPUT_PATH /home/humanbin/project/exe)
# set(CMAKE_CXX_STANDARD 11)
# add_executable(app ${SRC})
set(LIBRARY_OUTPUT_PATH /home/humanbin/project/lib)
add_library(calc SHARED ${SRC})

